.provarCaches/00D6C0000000xA6UAI/objects/PHSS_Material__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Instructor Bulletin</fullName>
                </value>
                <value>
                    <fullName>Instructor Materials</fullName>
                </value>
                <value>
                    <fullName>Supporting Materials</fullName>
                </value>
                <value>
                    <fullName>Participant Materials</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContentDocumentID__c</fullName>
        <label>ContentDocumentID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContentVersionContentURL__c</fullName>
        <label>ContentVersionContentURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ContentVersionFileType__c</fullName>
        <label>ContentVersionFileType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContentVersionID__c</fullName>
        <label>ContentVersionID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContentVersionLink__c</fullName>
        <formula>IF( is_S3_Content__c ,
S3_URL__c ,

$Label.PHSS_IC_Community_URL_Domain + $Label.PHSS_IC_Community_URL_Content_Version_Servlet + ContentVersionID__c
)</formula>
        <label>ContentVersionLink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContentVersionVersionNumber__c</fullName>
        <label>ContentVersionVersionNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContentWorkspaceID__c</fullName>
        <label>ContentWorkspaceID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Library_Name__c</fullName>
        <label>Content Library Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Tags__c</fullName>
        <label>Content Tags</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disable_Community_Preview__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field should be checked on all records that point to non-standard PDF files ( like the Adobe Presenter PDF files ) as well as any really large files that would take a long time to load into the previewer.</description>
        <label>Disable Community Preview</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Featured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Featured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Material_Name__c</fullName>
        <label>Material Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PHSS_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PHSS Program</label>
        <referenceTo>PHSS_Program__c</referenceTo>
        <relationshipLabel>PHSS Materials (PHSS Program)</relationshipLabel>
        <relationshipName>PHSS_Materials_Children</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>S3_URL__c</fullName>
        <label>S3 URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Short_Tags__c</fullName>
        <description>This is a copy of the long text tags area to allow filter searchs.  This must be populated by a dump and load of the Content Tags field</description>
        <label>Short Tags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Document</fullName>
                </value>
                <value>
                    <fullName>Link</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <default>true</default>
                    <label>Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isCandidateMaterial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCandidateMaterial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_S3_Content__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is S3 Content</label>
        <type>Checkbox</type>
    </fields>
    <label>PHSS Material</label>
    <listViews>
        <fullName>BRK</fullName>
        <columns>NAME</columns>
        <columns>Sequence__c</columns>
        <columns>Type__c</columns>
        <columns>Content_Tags__c</columns>
        <columns>Content_Library_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Short_Tags__c</field>
            <operation>contains</operation>
            <value>Onboarding</value>
        </filters>
        <label>BRK No Program</label>
    </listViews>
    <listViews>
        <fullName>BRK_Blended</fullName>
        <columns>NAME</columns>
        <columns>Sequence__c</columns>
        <columns>Type__c</columns>
        <columns>Content_Tags__c</columns>
        <columns>Content_Library_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Content_Library_Name__c</field>
            <operation>equals</operation>
            <value>PHSS-IC-CourseAdmin-Instructor</value>
        </filters>
        <filters>
            <field>Short_Tags__c</field>
            <operation>contains</operation>
            <value>Blended</value>
        </filters>
        <label>BRK Blended</label>
    </listViews>
    <listViews>
        <fullName>BRK_Bridging</fullName>
        <columns>Material_Name__c</columns>
        <columns>NAME</columns>
        <columns>Sequence__c</columns>
        <columns>Type__c</columns>
        <columns>Content_Tags__c</columns>
        <columns>Content_Library_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Short_Tags__c</field>
            <operation>contains</operation>
            <value>Bridge</value>
        </filters>
        <filters>
            <field>Content_Library_Name__c</field>
            <operation>contains</operation>
            <value>lifecycle</value>
        </filters>
        <label>BRK Bridging</label>
    </listViews>
    <listViews>
        <fullName>BRK_Candidate_pages</fullName>
        <columns>NAME</columns>
        <columns>Sequence__c</columns>
        <columns>Type__c</columns>
        <columns>Category__c</columns>
        <columns>Content_Tags__c</columns>
        <columns>Content_Library_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Content_Library_Name__c</field>
            <operation>contains</operation>
            <value>InstructorCandidate</value>
        </filters>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Supporting Materials</value>
        </filters>
        <label>BRK Candidate pages</label>
    </listViews>
    <listViews>
        <fullName>BRK_Classroom</fullName>
        <columns>NAME</columns>
        <columns>Sequence__c</columns>
        <columns>Type__c</columns>
        <columns>Content_Tags__c</columns>
        <columns>Content_Library_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Content_Library_Name__c</field>
            <operation>equals</operation>
            <value>PHSS-IC-CourseAdmin-Instructor</value>
        </filters>
        <filters>
            <field>Short_Tags__c</field>
            <operation>contains</operation>
            <value>Classroom</value>
        </filters>
        <label>BRK Classroom</label>
    </listViews>
    <listViews>
        <fullName>BRK_Digital_Certs</fullName>
        <columns>NAME</columns>
        <columns>Sequence__c</columns>
        <columns>Type__c</columns>
        <columns>Content_Tags__c</columns>
        <columns>Content_Library_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Content_Library_Name__c</field>
            <operation>equals</operation>
            <value>PHSS-IC-CourseAdmin-Instructor</value>
        </filters>
        <filters>
            <field>Short_Tags__c</field>
            <operation>contains</operation>
            <value>Digital</value>
        </filters>
        <label>BRK Digital Certs</label>
    </listViews>
    <listViews>
        <fullName>BRK_Direct</fullName>
        <columns>NAME</columns>
        <columns>Sequence__c</columns>
        <columns>Type__c</columns>
        <columns>Content_Tags__c</columns>
        <columns>Content_Library_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Content_Library_Name__c</field>
            <operation>equals</operation>
            <value>PHSS-IC-CourseAdmin-Instructor</value>
        </filters>
        <filters>
            <field>Short_Tags__c</field>
            <operation>contains</operation>
            <value>Direct</value>
        </filters>
        <label>BRK Direct</label>
    </listViews>
    <listViews>
        <fullName>BRK_Docs</fullName>
        <columns>NAME</columns>
        <columns>Sequence__c</columns>
        <columns>Type__c</columns>
        <columns>Content_Tags__c</columns>
        <columns>Content_Library_Name__c</columns>
        <columns>ContentVersionFileType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ContentVersionFileType__c</field>
            <operation>equals</operation>
            <value>MP4,Link</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Document</value>
        </filters>
        <label>BRK Docs MP4, Links</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BRK_EMR</fullName>
        <columns>NAME</columns>
        <columns>Sequence__c</columns>
        <columns>Type__c</columns>
        <columns>Content_Tags__c</columns>
        <columns>Content_Library_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Content_Library_Name__c</field>
            <operation>contains</operation>
            <value>EMR</value>
        </filters>
        <label>BRK EMR</label>
    </listViews>
    <listViews>
        <fullName>BRK_IT_Candidate</fullName>
        <columns>NAME</columns>
        <columns>Sequence__c</columns>
        <columns>Type__c</columns>
        <columns>Content_Tags__c</columns>
        <columns>Content_Library_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Content_Library_Name__c</field>
            <operation>equals</operation>
            <value>PHSS-IC-InstructorLifecycle-Instructor</value>
        </filters>
        <filters>
            <field>Short_Tags__c</field>
            <operation>contains</operation>
            <value>Instructor Trainer Candidate</value>
        </filters>
        <label>BRK IT Candidate</label>
    </listViews>
    <listViews>
        <fullName>BRK_LG17</fullName>
        <columns>Material_Name__c</columns>
        <columns>Sequence__c</columns>
        <columns>Type__c</columns>
        <columns>Category__c</columns>
        <columns>Content_Tags__c</columns>
        <columns>Content_Library_Name__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Content_Library_Name__c</field>
            <operation>contains</operation>
            <value>LG17</value>
        </filters>
        <label>BRK LG17</label>
    </listViews>
    <listViews>
        <fullName>BRK_Material</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Content_Library_Name__c</columns>
        <columns>is_S3_Content__c</columns>
        <columns>S3_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Content_Library_Name__c</field>
            <operation>contains</operation>
            <value>lts</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Video</value>
        </filters>
        <label>BRK Material_Participant</label>
    </listViews>
    <listViews>
        <fullName>BRK_Material_Instructor</fullName>
        <columns>NAME</columns>
        <columns>Sequence__c</columns>
        <columns>Type__c</columns>
        <columns>Content_Tags__c</columns>
        <columns>Content_Library_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Instructor Materials</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Document,Link</value>
        </filters>
        <label>BRK Material_Instructor</label>
    </listViews>
    <listViews>
        <fullName>BRK_Material_Instructor_AEO</fullName>
        <columns>NAME</columns>
        <columns>Sequence__c</columns>
        <columns>Type__c</columns>
        <columns>Content_Tags__c</columns>
        <columns>Content_Library_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Instructor Materials</value>
        </filters>
        <filters>
            <field>Content_Library_Name__c</field>
            <operation>contains</operation>
            <value>AEO</value>
        </filters>
        <label>BRK Material_Instructor_AEO</label>
    </listViews>
    <listViews>
        <fullName>BRK_Material_Instructor_AquaticAtt</fullName>
        <columns>NAME</columns>
        <columns>Sequence__c</columns>
        <columns>Type__c</columns>
        <columns>Content_Tags__c</columns>
        <columns>Content_Library_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Instructor Materials</value>
        </filters>
        <filters>
            <field>Content_Library_Name__c</field>
            <operation>contains</operation>
            <value>Attraction</value>
        </filters>
        <label>BRK Material_Instructor_AquaticAtt</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PHSS Materials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>